--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Adole Technologies</h1>
+    <h1>Adola Technologies</h1>
+     <h3>Coming soon....</h3>
 </body>
 </html>
